# assignment-V2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: base.yaml
lib/: catalog.py  chatbot.py  config.py  constants.py  data_loading.py  export.py  openai_client.py  parsing.py  paths.py  text_extraction.py  ui_catalog_chat.py  utils.py  validation.py
notebooks/: clean_assignment.ipynb  old_nb.ipynb
output_data/products_csv/: products.csv
output_data/products_json/: products.json
tests/: smoke_test.py
